--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,10 @@ p {
   color: var(--gray-5);
   letter-spacing: var(--font-letterspacing-1);
 }
+
+@media (max-width: 450px) {
+  p {
+    font-size: var(--font-size-2);
+    font-weight: var(--font-weight-4);
+  }
+}
